--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/mathildeew/man-secrets/issues"
   },
-  "homepage": "https://github.com/mathildeew/man-secrets#readme"
+  "homepage": "https://github.com/mathildeew/man-secrets#readme",
+  "devDependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
